--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@mui/x-data-grid-generator": "^6.0.2",
     "@mui/x-data-grid-premium": "^6.0.2",
     "@mui/x-data-grid-pro": "^6.0.2",
+    "@mui/x-date-pickers": "^6.0.2",
+    "@mui/x-date-pickers-pro": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
